--- a/brandy/css/style.css
+++ b/brandy/css/style.css
@@ -1,22 +1,20 @@
 body {
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 a {
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
 }
 
 /*NewClasses*/
 
-.background-image {
-    background-size: auto 100%;
-}
 
 /*Header*/
 
@@ -57,7 +55,7 @@ header {
 .scroll_down h4 {
     font-size: 12px;
     color: #000;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-transform: uppercase;
 }
 
@@ -153,7 +151,8 @@ header {
 .single_testimonial p {
     color: #404040;
     font-size: 18px;
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
     letter-spacing: 1px;
     padding-top: 110px;
 }
@@ -161,7 +160,8 @@ header {
     color: #404040;
     font-size: 14px;
     text-transform: uppercase;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
     letter-spacing: 1px
 }
 
@@ -184,14 +184,14 @@ header {
     font-size: 24px;
 }
 .single_count h3 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #fff;
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 0px;
 }
 .single_count p {
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #fff;
     font-size: 14px;
     text-transform: uppercase;
