--- a/brandy/css/style.css
+++ b/brandy/css/style.css
@@ -27,8 +27,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 header {
     background: url(../images/background_01.jpg);
-    background-size: 100% auto;
+    background-size: cover;
     background-repeat: no-repeat;
+    max-width: 100%;
 }
 .section_overlay {
     background: rgba(250, 250, 250, .5);
