--- a/brandy/css/style.css
+++ b/brandy/css/style.css
@@ -15,6 +15,18 @@ h1, h2, h3, h4, h5, h6 {
 
 /*NewClasses*/
 
+.font-bold {
+    font-weight: 900;
+}
+.font-light {
+    font-weight: 100;
+}
+.navbar-nav-picture>img {
+    height: 20px;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    /* For IE8 and earlier */
+}
 
 /*Header*/
 
