--- a/brandy/css/style.css
+++ b/brandy/css/style.css
@@ -47,6 +47,23 @@ h1, h2, h3, h4, h5, h6 {
     width: 10%;
     max-width: 10%;
 }
+.shape-width-extra-small {
+    width: 3%;
+    max-width: 3%;
+}
+
+/*Feature*/
+
+.feature-container {}
+.feature-container img {}
+.feature-container-content {}
+.feature-container-text {
+    color: #404040;
+    font-size: 14px;
+}
+.feature-container-text span {
+    font-weight: 900;
+}
 
 /*Header*/
 
@@ -75,7 +92,7 @@ header .section_overlay {
 }
 .home_text {
     padding-top: 210px;
-    padding-bottom: 210px;
+    padding-bottom: 160px;
 }
 .home_text h2 {
     color: #010101;
@@ -88,7 +105,6 @@ header .section_overlay {
     font-size: 14px;
     text-transform: uppercase;
 }
-.home_text img {}
 .scroll_down {
     padding-bottom: 50px;
 }
@@ -159,14 +175,21 @@ header .section_overlay {
     margin-bottom: 70px;
 }
 
-/*Testimonial*/
+/*latest-projects*/
 
-.testimonial {
-    padding-top: 130px;
+.latest-projects {
     padding-bottom: 80px;
 }
-.testimonial {}
-.testimonial .icon:after {
+.latest-projects {}
+.latest-projects h1 {
+    font-size: 25px;
+    color: #3d3d3d;
+    letter-spacing: 5px;
+    padding-top: 30px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.latest-projects .icon:after {
     content: "";
     position: absolute;
     width: 80px;
@@ -180,7 +203,7 @@ header .section_overlay {
     -ms-transform: rotate(45deg);
     margin-left: -40px;
 }
-.testimonial .icon i {
+.latest-projects .icon i {
     color: #fff;
     font-size: 47px;
     position: absolute;
@@ -188,7 +211,7 @@ header .section_overlay {
     left: 50%;
     margin-left: -23px;
 }
-.single_testimonial p {
+.single_latest-projects p {
     color: #404040;
     font-size: 18px;
     font-family: 'Lato', sans-serif;
@@ -196,7 +219,7 @@ header .section_overlay {
     letter-spacing: 1px;
     padding-top: 110px;
 }
-.single_testimonial h4 {
+.single_latest-projects h4 {
     color: #404040;
     font-size: 14px;
     text-transform: uppercase;
