--- a/brandy/css/style.css
+++ b/brandy/css/style.css
@@ -163,6 +163,14 @@ header .section_overlay {
     margin-bottom: 10px;
     line-height: 21px;
 }
+.about_title h1 {
+    font-size: 25px;
+    color: #3d3d3d;
+    letter-spacing: 5px;
+    padding-top: 30px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
 .about_title h2 {
     font-size: 25px;
     color: #3d3d3d;
